# VAFPY

./: .gitignore  README.md  pyproject.toml
Code/: AFQMC_INCAR  INCAR_AFQMC  INCAR_AFQMC_test  afqmc_INPUT_H2O.py  afqmc_RUN_kpts.py  afqmc_alpha.py  afqmc_funcs_kpts.py  afqmc_opt_INPUT.py  afqmc_opt_RUN.py  afqmc_opt_alpha.py  afqmc_opt_func.py  amir_compute_e_gs.py  requirements.txt  std_error.py
docs/: conf.py
kpts_code/: 1_old_1  1_old_2  1_old_3  1_old_4  H1_1.npy  Q_list.npy  Q_list_2k.npy  Q_list_3k.npy  afqmc_INPUT_H2.py  afqmc_INPUT_H2_0.py  afqmc_INPUT_H2_1.py  afqmc_INPUT_H2_10.py  afqmc_INPUT_H2_11.py  afqmc_INPUT_H2_2.py  afqmc_INPUT_H2_3.py  afqmc_INPUT_H2_4.py  afqmc_INPUT_H2_5.py  afqmc_INPUT_H2_6.py  afqmc_INPUT_H2_7.py  afqmc_INPUT_H2_8.py  afqmc_INPUT_H2_9.py  afqmc_RUN_kpts.py  afqmc_RUN_kpts.py.lprof  afqmc_RUN_kpts_0.py  afqmc_RUN_kpts_1.py  afqmc_RUN_kpts_10.py  afqmc_RUN_kpts_11.py  afqmc_RUN_kpts_2.py  afqmc_RUN_kpts_3.py  afqmc_RUN_kpts_4.py  afqmc_RUN_kpts_5.py  afqmc_RUN_kpts_6.py  afqmc_RUN_kpts_7.py  (+41 more)
source/: .gitignore  installed.txt  pyproject.toml
source/run/: AFQMC_CS_num_k1_samp_freq_1_Reortho_1_Rebal_50_TAU_0.00075_walkers_1000.txt  AFQMC_CS_num_k1_samp_freq_1_Reortho_1_Rebal_50_TAU_0.00075_walkers_500.txt  WALKERS.npy  WEIGHT.npy  outcar.txt  vafpy.in  weights_history.txt
source/run/gamma/: H1.npy  k1_list.npy
source/run/kpoint/: H1.npy  vafpy.in
source/test/: test_HF.py  test_rebalancing.py  test_regression.py  test_version.py
source/test/diamond/: AFQMC_CS_num_k1_samp_freq_1_Reortho_1_Rebal_10_TAU_0.00075_walkers_1000.txt  AFQMC_CS_num_k1_samp_freq_1_Reortho_1_Rebal_3_TAU_0.00075_walkers_500.txt  H2_zip.npy  outcar.txt  test_diamond.py  vafpy.in  weights_history.txt
source/vafpy/: functions.py  input_reader.py  run_kpts.py
source/vafpy_v1/: functions.py  run_kpts.py  vafpy.in
(+92 files in other folders)
